--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <EditText
+        android:id="@+id/firstNumber"
+        android:layout_marginTop="24dp"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:autofillHints=""
+        android:hint="Masukkan angka pertama"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        tools:ignore="HardcodedText" />
+
+    <EditText
+        android:id="@+id/secondNumber"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:autofillHints=""
+        android:hint="Masukkan angka kedua"
+        android:inputType="numberDecimal"
+        android:padding="12dp"
+        tools:ignore="HardcodedText" />
+
+    <RadioGroup
+        android:id="@+id/operationGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:textSize="24sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="4dp"
-        android:layout_centerInParent="true"/>
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/nimTextView"
+        <RadioButton
+            android:id="@+id/addition"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:text="+"
+            android:textColor="@color/headline"
+            tools:ignore="HardcodedText" />
+
+        <RadioButton
+            android:id="@+id/subtraction"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:text="-"
+            android:textColor="@color/headline"
+            tools:ignore="HardcodedText" />
+
+        <RadioButton
+            android:id="@+id/multiplication"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:text="*"
+            android:textColor="@color/headline"
+            tools:ignore="HardcodedText" />
+
+        <RadioButton
+            android:id="@+id/division"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:text="/"
+            android:textColor="@color/headline"
+            tools:ignore="HardcodedText" />
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/calculateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nim"
-        android:textSize="24sp"
-        android:layout_below="@id/nameTextView"
-        android:layout_centerHorizontal="true"/>
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/component"
+        android:textColor="@color/component_text"
+        android:text="Hitung"
+        tools:ignore="HardcodedText" />
 
-</RelativeLayout>
+</LinearLayout>
